style(cardslider): fix distortion of toms image

--- a/css/cardslider.css
+++ b/css/cardslider.css
@@ -25,6 +25,7 @@
   border-radius: 50%;
   border: 3px solid rgba(33, 128, 141, 1);
   padding: 4px;
+  object-fit: cover;
 }
 .card-list .card-item .user-name {
   font-weight: 500;
